--- a/src/app/components/model/modelForm.html
+++ b/src/app/components/model/modelForm.html
@@ -37,8 +37,8 @@
   </div>
 
   <div class="col-lg-6 offset-lg-1">
-    <classifications-view value="$ctrl.model"></classifications-view>
-    <contributors-view value="$ctrl.model" context="$ctrl.model"></contributors-view>
+    <classifications-view value="$ctrl.model" required="true"></classifications-view>
+    <contributors-view value="$ctrl.model" context="$ctrl.model" required="true"></contributors-view>
     <vocabularies-view value="$ctrl.model" context="$ctrl.model"></vocabularies-view>
     <reference-datas-view value="$ctrl.model" context="$ctrl.model"></reference-datas-view>
     <imported-namespaces-view value="$ctrl.model"
