--- a/src/app/components/model/newModelPage.html
+++ b/src/app/components/model/newModelPage.html
@@ -54,8 +54,8 @@
         </div>
 
         <div class="col-lg-6 offset-lg-1">
-          <classifications-view value="$ctrl"></classifications-view>
-          <contributors-view value="$ctrl" context="$ctrl.context"></contributors-view>
+          <classifications-view value="$ctrl" required="true"></classifications-view>
+          <contributors-view value="$ctrl" context="$ctrl.context" required="true"></contributors-view>
           <vocabularies-view value="$ctrl" context="$ctrl.context"></vocabularies-view>
           <reference-datas-view value="$ctrl" context="$ctrl.context"></reference-datas-view>
           <imported-namespaces-view value="$ctrl"
