--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -350,15 +350,16 @@ visualization-view ajax-loading-indicator {
   }
 
   .description-col {
-    width: 45%;
+    width: 50%;
   }
 
   .modified-at-col {
-    width: 10%;
+    width: 8%;
   }
 
   .menu-col {
-    width: 5%;
+    width: 2%;
+    vertical-align: top;
   }
 }
 
