--- a/src/app/translations/misc.html
+++ b/src/app/translations/misc.html
@@ -285,6 +285,7 @@
 <div translate>DATA_MODEL_EDITOR</div>
 <div translate>TERMINOLOGY_EDITOR</div>
 <div translate>CODE_LIST_EDITOR</div>
+<div translate>MEMBER</div>
 <div translate>Maximize</div>
 <div translate>Minimize</div>
 <div translate>Add new library</div>
