--- a/src/app/translations/misc.html
+++ b/src/app/translations/misc.html
@@ -193,6 +193,7 @@
 <div translate>Create sub association</div>
 <div translate>Create super attribute</div>
 <div translate>Create super association</div>
+<div translate>Show class information</div>
 <div translate>Show attribute information</div>
 <div translate>Show association information</div>
 <div translate>by referencing external uri</div>
