YTI-379: Add basic Virtual Scroller structure, work in progress.

--- a/src/app/components/editor/searchPredicateTableModal.html
+++ b/src/app/components/editor/searchPredicateTableModal.html
@@ -79,7 +79,7 @@
 
         <div class="content-box">
 
-          <div class="search-results-table table-container">
+          <div class="search-results-table-container">
 
             <ajax-loading-indicator ng-if="$ctrl.loadingResults"></ajax-loading-indicator>
 
