--- a/src/app/components/editor/searchClassTableModal.html
+++ b/src/app/components/editor/searchClassTableModal.html
@@ -122,7 +122,7 @@
     <div class="row full-height">
       <div class="col-md-12">
         <div class="content-box">
-          <div class="search-results-table table-container">
+          <div class="search-results-table-container">
             <ajax-loading-indicator ng-if="$ctrl.loadingResults"></ajax-loading-indicator>
             <app-search-class-table-modal-content ng-if="!$ctrl.loadingResults" [sort-by]="$ctrl.sortBy" [model]="$ctrl.model"
                                                   [filter-exclude]="$ctrl.filterExclude"
